fix card spacing

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ p {
     margin-top: 30px;
     width: 100%;
     display: flex;
-    gap: 20px;
+    gap: 50px;
     align-items: center;
     justify-content: center;
 }
